<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.skymatic.jpackagetest</groupId>
	<artifactId>jpackage-helloworld</artifactId>
	<version>1.0-SNAPSHOT</version>
	<description>Creates a very simple java application and packages it with jlink and jpackage.</description>

	<name>jpackage-helloworld</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<developers>
		<developer>
			<name>Armin Schrenk</name>
			<email>armin.schrenk@skymatic.de</email>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<properties>
		<java.jpms.modulename>de.skymatic.jpackagetest</java.jpms.modulename>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>14</maven.compiler.release>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<!-- adds Implementation-Version which can be read during runtime -->
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<mainClass>de.skymatic.jpackagetest.HelloJPackage</mainClass>
						</manifest>
					</archive>
					<outputDirectory>${project.build.directory}/jar</outputDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<id>jlink</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${env.JAVA_HOME}/bin/jlink</executable>
							<workingDirectory>${project.build.directory}</workingDirectory>
							<commandlineArgs>--output runtimeImage --module-path ./jar --add-modules ${java.jpms.modulename} --no-header-files --no-man-pages --strip-debug --compress=1</commandlineArgs>
						</configuration>
					</execution>
					<execution>
						<id>jpackage</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${env.JAVA_HOME}/bin/jpackage</executable>
							<workingDirectory>${project.build.directory}</workingDirectory>
							<commandlineArgs>--name helloJPackage --type app-image -m ${java.jpms.modulename}/${java.jpms.modulename}.HelloJPackage --runtime-image runtimeImage --app-version ${project.version} --vendor "Skymatic GmbH" </commandlineArgs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.0.0-M1</version>
			</plugin>
		</plugins>
	</build>
</project>
